--- a/springboot/src/main/resources/application.properties
+++ b/springboot/src/main/resources/application.properties
@@ -1,1 +1,7 @@
 
+# DB
+spring.jpa.hibernate.ddl-auto=update
+spring.datasource.driver-class-name=org.h2.Driver
+spring.datasource.url=jdbc:h2:./h2db/db_example
+spring.datasource.username=username
+spring.datasource.password=password
