--- a/frontend/nuxt-app/package.json
+++ b/frontend/nuxt-app/package.json
@@ -8,5 +8,9 @@
   },
   "devDependencies": {
     "nuxt": "3.0.0-rc.6"
+  },
+  "dependencies": {
+    "@nuxtjs/apollo": "^4.0.1-rc.5",
+    "graphql-tag": "^2.12.6"
   }
 }
